fixed justification for sketchpad and header height, adjusted some elements for better spacing

--- a/style.css
+++ b/style.css
@@ -9,13 +9,13 @@ body {
 }
 
 .header {
-    flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-width: 100%;
     background-color: cadetblue;
+    height: 20vh;
 }
 
 .gridSizeSlider {
@@ -36,24 +36,29 @@ body {
 
 .main {
     flex: 4;
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     min-width: 100%;
     justify-content: center;
+    align-items: center;
     background-color: bisque;
     height: 100%;
 }
+
 
 .sketchpad {
     display: flex;
     flex-wrap: wrap;
     max-width: 200px; 
     max-height: 200px;
+    margin: 0 auto;
+    border-color: red;
   }
 
 .cell {
     border: 1px solid black;
     background-color: lightgray;
-    width: 20px;
-    height: 20px;
+    /* width: 20px;
+    height: 20px; */
 }
